[gd_scene load_steps=10 format=3 uid="uid://cd3kastplo2fk"]

[ext_resource type="Texture2D" uid="uid://kkg2u2ucr6gh" path="res://src/main/assets/texture/tank/炮弹爆炸/explosion1.png" id="1_7nd6e"]
[ext_resource type="Script" path="res://src/main/scene/level/tank/cannonball.gd" id="1_q34xp"]
[ext_resource type="Texture2D" uid="uid://bs1rjokkgyqe7" path="res://src/main/assets/texture/tank/炮弹爆炸/explosion2.png" id="2_rrydq"]
[ext_resource type="Texture2D" uid="uid://dr4og67iusr2b" path="res://src/main/assets/texture/tank/炮弹爆炸/explosion3.png" id="3_7bmq8"]
[ext_resource type="Texture2D" uid="uid://s4fw00k1hp4d" path="res://src/main/assets/texture/tank/炮弹爆炸/explosion4.png" id="4_bc80s"]
[ext_resource type="Texture2D" uid="uid://djdywhafsghkv" path="res://src/main/assets/texture/tank/炮弹爆炸/explosion5.png" id="5_5gds2"]
[ext_resource type="Texture2D" uid="uid://bi1re6yhxboxn" path="res://src/main/assets/texture/tank/炮弹.png" id="6_rhh8m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lmv7f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7nd6e")
}, {
"duration": 1.0,
"texture": ExtResource("2_rrydq")
}, {
"duration": 1.0,
"texture": ExtResource("3_7bmq8")
}, {
"duration": 1.0,
"texture": ExtResource("4_bc80s")
}, {
"duration": 1.0,
"texture": ExtResource("5_5gds2")
}],
"loop": false,
"name": &"explosion",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2tlen"]
radius = 8.0

[node name="Cannonball" type="Node2D"]
script = ExtResource("1_q34xp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_lmv7f")
animation = &"explosion"
frame = 4
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("6_rhh8m")

[node name="Area2D" type="Area2D" parent="." groups=["cannonball"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_2tlen")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
